objects/CF_Organization__mdt.object
<CustomObject>
    <fields>
        <fullName>IsActive__c</fullName>
        <label>IsActive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <label>OrgId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <label>OrgName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>SIU</fullName>
                </value>
                <value>
                    <fullName>IntegPOC3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrgNamedCred__c</fullName>
        <label>OrgNamedCred</label>
        <type>Url</type>
    </fields>
    <label>CF_Organization</label>
    <pluralLabel>CF_Organizations</pluralLabel>
</CustomObject>